--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> PORTFOLIO LUIZ GUERRA</title>
-</head>
+  <style>
+    *{
+      background-color: red;
+    }
+    .imgLink{
+      width: 50px;
+      height: 50px;
+      position:absolute;
+    }
+
+  </style>
+
+
+  </head>
 
   <body>
     <section id="nav_menu">
