--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     *{
       background-color: red;
     }
-    .imgLink{
+    #imgLink{
       width: 50px;
       height: 50px;
       position:absolute;
